# hiv_enugu

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_analysis.py
data/processed/: cleaned_enrollments.csv  forecast_results_2024_2028.csv  forecast_results_cleaned_enrollments.csv  forecast_results_next_5_years.csv
docs/: mkdocs.yml
docs/docs/: index.md
hiv_enugu/: __init__.py  analysis_pipeline.py  config.py  data_processing.py  reporting.py  utils.py
hiv_enugu/modeling/: data_prep.py  ensemble.py  features.py  fit.py  growth_models.py  predict.py  train.py
hiv_enugu/plotting/: diagnostics.py  evaluation.py  exploratory.py  utils.py
models/: X_train_context_for_growth_models.pkl  all_fitted_growth_models.pkl  best_individual_growth_Logistic.pkl  best_individual_growth_Richards.pkl  feature_scaler.pkl  gb_model.pkl
reports/: ensemble_input_table_Gradient_Boosting.csv  ensemble_input_table_Random_Forest.csv  ensemble_input_table_Simple_Average.csv  ensemble_input_table_Weighted_Average_(InvMSE).csv  ensemble_input_table_Weighted_Average_(R2).csv  feature_importances_RF_GB.csv  full_predictions_table.csv  overall_evaluation_metrics.csv  predictions_summary_table.csv  standalone_model_coefficients.csv  standalone_model_metrics.csv  weighted_average_comparison.csv  weighted_parameters_table.csv
